--- a/vercel.json
+++ b/vercel.json
@@ -2,24 +2,14 @@
           "version": 2,
           "builds": [
             {
-              "src": "app.js",
+              "src": "src/app.js",
               "use": "@vercel/node"
             }
           ],
           "routes": [
             {
               "src": "/(.*)",
-              "dest": "/src/app.js",
-              "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "DELETE"
-              ],
-              "headers": {
-                "Access-Control-Allow-Origin": "*",
-                "Access-Control-Allow-Credentials": "true"
-              }
+              "dest": "/"
             }
           ]
         }
