--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "test": "jest",
-    "start": "nodemon src/app.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
