--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "scripts": {
     "test": "jest",
-    "start": "nodemon index.js"
+    "start": "npm run lint && npm run format && nodemon index.js",
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +27,9 @@
     "@babel/core": "^7.26.9",
     "@eslint/js": "^9.20.0",
     "eslint": "^8.57.1",
-    "globals": "^15.15.0"
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "globals": "^15.15.0",
+    "prettier": "^3.5.3"
   }
 }
